# treebender

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.tpl
benches/: full_parse_reflexives.rs  reflexives.fgr
cli/: Cargo.toml
cli/src/: main.rs
examples/: asl-wordorder.fgr  dative-shift.fgr  no-features.fgr
src/: earley.rs  featurestructure.rs  forest.rs  grammar.fgr  grammar.rs  lib.rs  main.rs  parse_grammar.rs  rules.rs  syntree.rs  utils.rs
src/featurestructure/: mod.rs  node.rs  serialized.rs
src/fgr/: mod.rs  parse_grammar.rs
