[package]
name = "treebender"
version = "0.1.2"
authors = ["Theia Vogel <theia@vgel.me>"]
edition = "2024"
description = "An HDPSG inspired symbolic NLP library for Rust"
repository = "https://github.com/vgel/treebender"
license = "MIT"
keywords = ["nlp", "parsing", "earley", "syntax", "hdpsg"]
categories = ["science", "text-processing"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
regex = "1"
lazy_static = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "full_parse_reflexives"
harness = false
